fix: center align table columns

--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,7 @@ body {
 .nav-item {
   cursor: pointer;
 }
+
+td {
+  line-height: 60px;
+}
